2008-02-12  Ryan Lortie  <desrt@desrt.ca.

	* src/trash-empty.c: fix small memory leak

2008-02-12  Ryan Lortie  <desrt@desrt.ca>

	Fix the regression introduced in the last commit.  Add progress dialog
	support for emptying the trash via GIO.

	* src/trash-monitor.c:
	* src/trash-monitor.h: remove trash emptying functions.  they no
	longer logically belong here.
	* src/trash-empty.h:
	* src/trash-empty.c: new files.  handle emptying the trash.
	* src/trashapplet.h: remove mention of glade
	* src/trashapplet.c: remove trash emptying UI code (it's now in
	trash-empty.c)
	* src/Makefile.am: remove glade, add trash-empty.[ch]
	* trashapplet-empty-progress.ui: replaces trashapplet.glade (moved to
	GtkBuilder).
	* Makefile.am: install the .ui instead of the .glade

2008-02-12  Ryan Lortie  <desrt@desrt.ca>

	* src/trash-monitor.h:
	* src/trash-monitor.c:
	* src/trashapplet.h:
	* src/trashapplet.c:
	* src/Makefile.am: move from GnomeVFS -> GIO.  Note REGRESSION: no
	longer do we have a progress dialog for emptying the trash.
	Closes bug #509759.

2008-02-02  Kjartan Maraas  <kmaraas@gnome.org>

	* src/xstuff.c: (get_typed_property_data): The previous
	commit broke the build. Fix from Simon Holm Thøgersen.
	Closes bug #513611.

2008-01-28  Christian Persch  <chpe@gnome.org>

	* src/xstuff.c: (get_typed_property_data): Don't use
	G_GNUC_PRETTY_FUNCTION. Fixes the build with glib trunk.

2007-10-13  Callum McKenzie  <callum@spooky-possum.org>

	* src/trash-monitor.c: Use G_DEFINE_TYPE macros. Patch from Jaap
	Haitsma, Bug #459705.

2007-10-02  Jan Arne Petersen  <jpetersen@jpetersen.org>

	* docs/Makefile.am: Added German translation (by Tobias Höbel
	<tobsi-h@gmx.de>).
	* docs/de/de.po: Added de to DOC_LINGUAS.

2007-09-25  Gil Forcada  <gforcada@svn.gnome.org>

	* docs/ca/ca.po: Added Catalan translation.
	* docs/Makefile.am: Added ca.

2007-09-16  Jovan Naumovski  <jovan@lugola.net>

	* mk.po: Added Macedonian translation.

2007-09-04  Luca Ferretti  <elle.uca@libero.it>