@@ -1,4 +1,9 @@
-2008-02-12  Ryan Lortie  <desrt@desrt.ca.
+2008-02-13  Ryan Lortie  <desrt@desrt.ca>
+
+	* src/trash-empty.c:
+	* src/trashapplet.c: revert accidental string changes
+
+2008-02-12  Ryan Lortie  <desrt@desrt.ca>
 
 	* src/trash-empty.c: fix small memory leak
 
